0025399: Visualization - XCAFPrs_AISObject ignores global aspect settings

Copying of the default drawer's parameters added.